# async-http-task

./: CMakeLists.txt  README.md  main.cpp
include/: Client.hpp  IClient.hpp  Math.hpp  Message.hpp  Sender.hpp
src/: Client.cpp  Message.cpp  Sender.cpp
